welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage():Boolean){
	litmessage()
	if 
	else {
		avance()
	}
}
